name and links update

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,7 @@ import ThemeIcon from './ThemeIcon.astro';
 ---
 <div class="nav-bar">
     <div class="title-link">
-        <a href="/">Milky-Way</a>
+        <a href="/">Tamarisk Mendoza</a>
     </div>
     <div class="nav-links">
         <a href="/works/">Works</a>
