--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ const pageTitle = "Tamarisk Mendoza";
     <div class="gif">
         <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp"/>
     </div>
-    <h1>Tamarisk Mendoza</h1>
+    <h1>Tamarisk B Mendoza</h1>
     <small>Lead Generation Specialist</small>
     <h2>About</h2>
     <p>
