--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -9,16 +9,16 @@ interface Props {
 const { url, image, title, body } = Astro.props;
 ---
 <li class="link-card">
-    <a href={url}>
+    <a href={url} target="_blank">
         <div class="img">
             <img width="226" height="127" src={image} class="card-img" alt="ProjectImage">
         </div>
-	<h3 class="card-title">
-	    {title}
-	</h3>
-	<p class="card-txt">
-	    {body}
-        </p>
+        <h3 class="card-title">
+            {title}
+        </h3>
+	    <!-- <p class="card-txt">
+	        {body}
+        </p> -->
     </a>
 </li>
 <style>
