--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,10 +7,10 @@ const year = new Date().getFullYear();
             <ul class="icons">
                 <!-- <li><a href="#" target="_blank" class="foot-btn"><span class="git-icon">GitHub</span></a></li> -->
                 <li><a href="mailto:tamariskbm@gmail.com" class="foot-btn"><span class="mail-icon">Email</span></a></li>
-                <li><a href="https://www.linkedin.com/in/tamariskbm" target="_blank" class="foot-btn"><span class="linked-in">LinkedIn</span></a></li>
+                <!-- <li><a href="https://www.linkedin.com/in/tamariskbm" target="_blank" class="foot-btn"><span class="linked-in">LinkedIn</span></a></li> -->
             </ul>
         </div>
-        <small>&copy; {year} Milky-Way by <a href="https://github.com/ttomczak3">ttomczak</a>. All Rights Reserved.</small>
+        <small>&copy; {year} <a href="https://tamariskmendoza.netlify.app">Tamarisk Mendoza</a>. All Rights Reserved.</small>
     </div>
 </footer>
 <style>
@@ -22,6 +22,7 @@ const year = new Date().getFullYear();
         cursor: default;
         list-style: none;
         padding: 0;
+        columns: 1;
     }
 
     ul.icons li {
