--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,7 +7,7 @@ import ThemeIcon from './ThemeIcon.astro';
     </div>
     <div class="nav-links">
         <a href="/works/">Works</a>
-        <a href="/posts/">Posts</a>
+        <!-- <a href="/posts/">Posts</a> -->
         <!-- <a href="https://github.com/ttomczak3/Milky-Way" target="_blank">GitHub</a> -->
         <ThemeIcon />
     </div>
