--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,27 +20,28 @@ const pageTitle = "Tamarisk Mendoza";
     <h2>Skills</h2>
     <ul>
         <li>Data Analysis</li>
-        <li>Market Research</li>
-        <li>SEO Knowledge</li>
-        <li>Email Marketing</li>
-        <li>Content Marketing</li>
         <li>Communication</li>
         <li>Lead Nurturing</li>
+        <li>SEO Knowledge</li>
+        <li>Email Marketing</li>
+        <li>Market Research</li>
+        <li>Content Marketing</li>
     </ul>
     <h2>Tools</h2>
     <ul>
-        <li>Apollo.io</li>
-        <li>Wiza.co</li>
-        <li>SalesQL</li>
-        <li>Instant Data Scraper</li>
-        <li>RocketReach</li>
-        <li>Mailchimp</li>
         <li>Canva</li>
-        <li>Google Workspace</li>
-        <li>Wordpress</li>
+        <li>Wiza.co</li>
         <li>Quillbot</li>
+        <li>SalesQL</li>
+        <li>Apollo.io</li>
         <li>ChatGPT</li>
+        <li>Mailchimp</li>
+        <li>Wordpress</li>
         <li>SharpSpring</li>
+        <li>RocketReach</li>
+        <li>Google Workspace</li>
+        <li>Instant Data Scraper</li>
+        <li>LinkedIn Sales Navigator</li>
     </ul>
     <div class="gif">
         <img width="300" height="259" alt="RaccoonLaptopGif" src="/laptop.webp"/>
