--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,7 +36,7 @@ ul>li {
     font-size: 1.1em;
     hyphens: auto;
     line-height: 1.5;
-    text-indent: 1em;
+    /* text-indent: 1em; */
 }
 
 ul {
