--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,7 @@
 const year = new Date().getFullYear();
 ---
 <footer>
+    <h2>Let's Connect</h2>
     <div>
         <div>
             <ul class="icons">
