--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const year = new Date().getFullYear();
             <ul class="icons">
                 <!-- <li><a href="#" target="_blank" class="foot-btn"><span class="git-icon">GitHub</span></a></li> -->
                 <li><a href="mailto:tamariskbm@gmail.com" class="foot-btn"><span class="mail-icon">Email</span></a></li>
-                <!-- <li><a href="https://www.linkedin.com/in/tamariskbm" target="_blank" class="foot-btn"><span class="linked-in">LinkedIn</span></a></li> -->
+                <li><a href="https://www.linkedin.com/in/tamariskbm" target="_blank" class="foot-btn"><span class="linked-in">LinkedIn</span></a></li>
             </ul>
         </div>
         <small>&copy; {year} <a href="https://tamariskmendoza.netlify.app">Tamarisk Mendoza</a>. All Rights Reserved.</small>
