changed text to about me

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const pageTitle = "Tamarisk Mendoza";
     </div>
     <h1>Tamarisk B Mendoza</h1>
     <small>Lead Generation Specialist</small>
-    <h2>About</h2>
+    <h2>About Me</h2>
     <p>
         Passionate about lead generation, I excel in employing diverse and
         effective strategies to consistently deliver high-quality leads.
@@ -38,7 +38,7 @@ const pageTitle = "Tamarisk Mendoza";
         <li>Mailchimp</li>
         <li>Wordpress</li>
         <li>SharpSpring</li>
-        <li>RocketReach</li>
+           <li>RocketReach</li>
         <li>Google Workspace</li>
         <li>Instant Data Scraper</li>
         <li>LinkedIn Sales Navigator</li>
